--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -20,6 +20,7 @@ body:not(.theme-dark) .hide-theme-light {
 
     --#{$prefix}bg-forms: #{$dark-mode-darken};
     --#{$prefix}bg-surface: #{$dark};
+    --#{$prefix}bg-surface-secondary: #{$dark-mode-darken};
 
     --#{$prefix}card-bg: #{$dark-mode-darken};
     --#{$prefix}card-bg-hover: #{$dark-mode-darken};
