--- a/src/scss/layout/_root.scss
+++ b/src/scss/layout/_root.scss
@@ -11,8 +11,9 @@
   }
 
   --#{$prefix}bg-surface: #{$bg-surface};
-  --#{$prefix}bg-forms: var(--#{$prefix}bg-surface);
+  --#{$prefix}bg-surface-secondary: #{$bg-surface-secondary};
   --#{$prefix}bg-surface-dark: #{$bg-surface-dark};
+  --#{$prefix}bg-forms: var(--#{$prefix}bg-surface);
 
   --#{$prefix}border-color: #{$border-color};
   --#{$prefix}border-color-light: #{$border-color-light};
